# NOLAN

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  Nolan_Structure_Map_v1.md  \\wsl.localhost\Ubuntu\tmp\claude-1000\-mnt-d-ClaudeProjects-NOLAN\5ded06fa-77f2-41a9-be29-ddebf9cb17b5\scratchpad\imptest.py  _run_hub.py  _sg_writer.py  all_test.json  chavez_scored_gemini.json  chavez_scored_ollama.json  chavez_search.json  clusters.json  draft-20260104-110039.md  effects_list.json  full_export.json  image_search_results.json  indexed_gemini_whisper.json  indexed_hybrid.json  indexed_scenes.json  indexed_scenes_gemini.json  library_clusters.json  loc_test.json  nolan.bat  nolan.yaml  pyproject.toml  skills-lock.json  start_webui.bat  test_essay.md  test_hub.py  test_hub2.py  test_hub3.py  test_hub4.py  test_hub5.py  test_output.txt  test_output2.txt  todo.md  venezuela_dark_secret_clusters.json  wikimedia_test.json
.claude/: settings.local.json
asset/: ＂Genius, Billionaire, Playboy, Philanthropist＂ Tony Stark vs Steve Rogers - The Avengers (2012) [4-ftbs8TppY].whisper.json
assets/: README.md
comfy_api/: nolan_api_image_netayume_lumina_t2i.json
docs/: ACQUISITION_CONSOLIDATION.md  AGENT_BATCH_EDIT_HARDENING.md  ARCHITECTURE_CONSOLIDATION.md  ASSET_EXTRACTION_v1.md  ASSET_SOURCING_v1.md  BROLL_BRIEF.md  CODE_REVIEW_2026-06.md  COMPOSITION_ARCHITECTURE.md  DATA_SOURCE_DESIGN.md  DECORATION_COVERAGE_AUDIT.md  ENGINE_AUDIT.md  FAIR_USE_TRANSFORMS.md  FILE_ORGANIZATION.md  HF_EDIT_LOOP.md  HF_POSTMORTEM_FIXES.md  KEY_ASSETS_ANCHORED_POOL.md  LOTTIE_INTEGRATION.md  MOTION_EFFECTS.md  NARRATIVE_ASSET_PAIRING.md  NOLAN_BOTTLENECKS_v1.md  OMNIVOICE_SETUP.md  PICTURE_LIBRARY_v1.md  PIPELINE_RECOMMENDATION.md  PROJECT_MODEL_DESIGN.md  REFERENCE_TEMPLATE_ANALYSIS.md  REMOTION_EVALUATION.md  SCRIPT_REVIEW_PROGRAM.md  SOTA_ROADMAP.md  SOUND_DESIGN.md  SOURCES_ROADMAP.md  STYLE_ASSET_CHECKLIST.md  THEME_DECORATION_MAP.md  (+9 more)
(+2028 files in other folders)
