[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nolan"
version = "0.1.0"
description = "Video essay pipeline - transform essays into production-ready video packages"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "google-generativeai>=0.4",
    "opencv-python>=4.8",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
nolan = "nolan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
