[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nolan"
version = "0.1.0"
description = "Video essay pipeline - transform essays into production-ready video packages"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "google-generativeai>=0.4",
    "opencv-python>=4.8",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
    "pydantic>=2.0",
    "faster-whisper>=1.0",
    "numpy>=2,<2.3",       # opencv-python / moviepy require <2.3 — pin so nothing upgrades it
    "Pillow>=10.0,<12",    # moviepy requires <12
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
# Background removal / cutouts (nolan cutout, /images "Cut out"). Heavy ONNX
# stack, so opt-in. Pinned <2.0.76: rembg 2.0.76 declares numpy>=2.3 / pillow>=12.1
# which conflict with opencv/moviepy; 2.0.69 runs fine on numpy<2.3 / pillow<12.
cutout = [
    "rembg[cpu]>=2.0.69,<2.0.76",
]

[project.scripts]
nolan = "nolan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
